# AlphaLoop_Project

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  run_trading_cycle.py  run_tune.py
agents/: catalyst.py  code_decider.py  decider.py  llm_client.py
analysis/: momentum_grid.py  momentum_ic.py  momentum_weights.py
backtest/: engine.py  loader.py  regime.py  seed.py  tune.py  walkforward.py
broker/: kis_client.py
config/: llm_pricing.toml  models.toml  rate_limits.toml  risk_params.toml  settings.py  tax_rates.toml
core/: costs.py  schemas.py  timeutils.py
data/: cache.py  collect.py  indicators.py  market_data.py  panel.py  screener.py
docs/: 01-overview.md  02-principles.md  03-architecture.md  04-data.md  05-risk-trading.md  06-data-model.md  07-statistics.md  08-tech-stack.md  08-ui-dashboards.md  09-operations.md  09-tech-stack.md  10-evaluation.md  10-roadmap.md  11-operations.md  12-roadmap.md
eval/: gate.py  metrics.py
exec/: exits.py  orders.py
memory/: calibration.py  db.py  journal.py  retrieval.py  schema.sql  shadow.py
pipeline/: decision.py  screening.py  trading_cycle.py
risk/: portfolio.py  risk_engine.py  sizing.py
scripts/: smoke_test.py
tests/: test_calibration.py  test_catalyst.py  test_code_decider.py  test_collect.py  test_costs.py  test_cycle.py  test_data_layer.py  test_db.py  test_decider.py  test_decision.py  test_engine.py  test_exits.py  test_gate.py  test_indicators.py  test_kis_client.py  test_llm_client.py  test_loader.py  test_market_data.py  test_metrics.py  test_naver_finance.py  test_orders.py  (+15 more)
(+8 files in other folders)
